# QuickMap

./: .clang-format  .clang-tidy  .clangd  .cmake-format.yaml  .env.example  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  HoldFast.ini  LICENSE  QuickMap.ini  README.md  cliff.toml  lefthook.yml  pyrightconfig.json  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md  template-setup-pending
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  format.yml  lint.yml  nexus-upload.yml  pr-title.yml  release.yml  setup.yml  tidy.yml
cmake/: version.rc.in
cmake/ports/directxtk/: portfile.cmake  vcpkg.json
cmake/toolchains/: clang-cl-cross.cmake
cmake/triplets/: x64-llvm-mingw-static.cmake
docs/: nexus-page.md
scripts/: banner.py  build.sh  deploy.sh  format.sh  generate-nexus-page.py  init.ps1  init.sh  package.sh  update.sh
src/: InputHandler.cpp  InputHandler.h  PCH.h  Plugin.cpp  Utils.h
test/: PluginTests.cpp
